gcc/testsuite/gm2/iso/pass/modulereturn2.mod
MODULE modulereturn2 ;


BEGIN
   RETURN
EXCEPT
   RETURN
FINALLY
   RETURN
END modulereturn2.
