gcc/testsuite/gm2/iso/fail/badset.mod
MODULE badset ;

VAR
   set: set ;
BEGIN

END badset.
